use the predefined flyweights instead of new instances of Boolean
git-svn-id: file:///home/projects/mule/scm@12110 bf997673-6b11-0410-b953-e057580c5b09